update Memliner, Leap sh