@@ -3,24 +3,32 @@
 #on/off : control the spark.executor.extraJavaOptions
 #on : "on"
 
-### object array recognition limit
-# all the applications set the same value to avoid the JIT performance overhead
+##
+# Spark executor
+user="nvme"
+worker_ip="zion-9.cs.ucla.edu"
 
 ### Parameters wait for inputing
 
 ### Shell Scrip Control
 running_times=1
-tag="Leap-spark-lr-25-9G-mem"
-#tag="Kernel-default-spark-lr-25-9G-mem"
+tag="memliner-leap-spark-lr-25-mem-9G"
+#tag="memliner-leap-spark-lr-25-mem-10G-with-swap-cache-limit"
+#tag="Kernel-default-spark-lr-25-mem-9G"
 
 ### Applications control
 AppIterations="10"
 InputDataSet="out.wikipedia_link_en.2.9g"
 logLevel="info"
 
-#################
-## First run
-#############
+
+####
+#  Enable syscal/perf counter
+####
+enable_swap_counter=1
+swap_counter_reset_exe="${HOME}/System-Dev-Testcase/block_device/swap/remoteswap_reset_counter.o"
+swap_counter_read_exe="${HOME}/System-Dev-Testcase/block_device/swap/remoteswap_read_counter.o"
+
 
 
 #### Semeru ####
@@ -30,7 +38,33 @@ youngGenSize="4g"
 gcMode="G1"
 heapSize="32g" # This is -Xms.  -Xmx is controlled by Spark configuration
 ParallelGCThread="16"	# CPU server GC threads 
+
+# 1) Disable the adaptive triggering of concurrent GC
+#    Trigger concurrent GC when memory usage of old gen reaches up to 90%
+#    Match the concurrent tracing threads number with the threshold. Trigger minimum concurrent trcaing, no full-gc
+# 2) Delay rebuild to STW GC window
+# 3) When metaspace is full, a concurrent GC will be triggerred.
+TuneConcFreq="-XX:-G1UseAdaptiveIHOP -XX:InitiatingHeapOccupancyPercent=85 -XX:G1RSetUpdatingPauseTimePercent=20 -XX:MetaspaceSize=0x8000000 -Xnoclassgc"
 ConcGCThread=4
+
+
+#################
+# Functions
+#################
+
+function reset_sys_counter () {
+  echo " reset swap counter."
+  ssh -t ${user}@${worker_ip}   ${swap_counter_reset_exe}
+}
+
+function read_swap_counter () {
+  echo "read swap counter"
+  ssh -t ${user}@${worker_ip}   ${swap_counter_read_exe}
+}
+
+
+
+
 
 #############################
 # Start run the application
@@ -77,7 +111,7 @@ echo "parameter format: input set, pageRank iteration num, basic/off-heap/young-
      # Print methods compiled by C1 and C2
       #JITOption2="-XX:+CITraceTypeFlow"
 	
-			confVar="spark.executor.extraJavaOptions= ${JITOption} ${JITOption2} -XX:MaxNewSize=${youngGenSize}  -XX:+UseG1GC ${ParallelGCThread} ${ConcGCThread}  -Xms${heapSize} ${youngRatio}  -XX:+PrintGCDetails "
+			confVar="spark.executor.extraJavaOptions= ${JITOption} ${JITOption2} -XX:MaxNewSize=${youngGenSize}  -XX:+UseG1GC ${ParallelGCThread} ${ConcGCThread} ${TuneConcFreq} -Xms${heapSize} ${youngRatio}  -XX:+PrintGCDetails -Xlog:gc+ergo=debug,gc+ergo+ihop=debug"
 
 		else
 			echo "!! GC Mode ERROR  !!"
@@ -117,8 +151,27 @@ do
 
 
   # run the application
-	echo "spark-submit --class SparkLR    --conf "${confVar}"  ${HOME}/jars/lr.jar ~/data/${InputDataSet}  ${AppIterations}"
-  (time -p  spark-submit --class SparkLR   --conf "${confVar}"  ${HOME}/jars/lr.jar ~/data/${InputDataSet}  ${AppIterations} ) >> ${log_file} 2>&1
+	  echo "Start Execution ID ${count} - spark-submit --class SparkLR    --conf "${confVar}"  ${HOME}/jars/lr.jar ~/data/${InputDataSet}  ${AppIterations}"
+  
+    # reset sys counter
+    if [ "${enable_swap_counter}" = "1" ]
+    then
+      reset_sys_counter >> ${log_file} 2>&1
+    fi
+
+    # Run a batch
+    (time -p  spark-submit --class SparkLR   --conf "${confVar}"  ${HOME}/jars/lr.jar ~/data/${InputDataSet}  ${AppIterations}) >> ${log_file} 2>&1
+
+    # read sys counter
+    if [ "${enable_swap_counter}" = "1" ]
+    then
+      read_swap_counter >> ${log_file} 2>&1
+    fi
+
+    echo "End of Execution ID ${count}" >> ${log_file} 2>&1
+    echo "" >> ${log_file} 2>&1
+
+
 
   count=`expr $count + 1 `
 done
